Function delegation for handlers

--- a/ace/game_page.html
+++ b/ace/game_page.html
@@ -26,7 +26,7 @@
   <body>
     <div class="flex-container">
       <div>Gameplay graph</div>
-      <div>Controller</div>
+      <div>Controller <input type="text" id="move"> </div>
       <div>Alert / Notification</div>
     </div>
   </body>
