--- a/ace/game_page.html
+++ b/ace/game_page.html
@@ -25,8 +25,8 @@
   </head>
   <body>
     <div class="flex-container">
-      <div>Gameplay graph</div>
-      <div>Controller <input type="text" id="move"> </div>
+      <div>Gameplay graph <canvas width="65%", height="33%" id="canvas"></canvas></div>
+      <div>Controller <input type="text" id="move"></div>
       <div>Alert / Notification</div>
     </div>
   </body>
