--- a/ace/game_page.html
+++ b/ace/game_page.html
@@ -6,6 +6,7 @@
     <style>
     .flex-container {
       display: inline-flex;
+      flex-direction: column;
       flex-wrap: wrap;
       background-color: #85144b
     }
